# demo_py_toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.py
src/demo_py_toolkit/: __init__.py  cli.py  download.py  search.py  test_run.py
